--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todolist-mern-auth",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "engine": {
     "node": "14.x"
   },
