--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start": "npm install && node server.js",
     "dev": "nodemon server.js"
   },
   "author": "Frankii Tang",
