--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "concurrently -n 'backend,frontend' -c 'red,green' \"cd server && npm run dev\" \"cd client && npm run start\"",
     "heroku-postbuild": "npm run install-client && npm run build",
     "install-client": "npm install client",
-    "client": "npm run start",
+    "client": "cd client && npm run start",
     "build": "cd client && npm run build"
   },
   "author": "Cratonic Dev",
